--- a/orchestrator/Cargo.toml
+++ b/orchestrator/Cargo.toml
@@ -27,3 +27,6 @@ schemars = "1.0"
 once_cell = "1.19"
 tokio-util = { version = "0.7", features = ["codec"] }
 futures-util = "0.3"
+
+[dev-dependencies]
+tempfile = { workspace = true }
